# VeriVia

./: .env.example  .gitignore  Cargo.toml  copie  index.html  package-lock.json  package.json  tailwind.config.js
.sqlx/: query-05861084f55a0947e037a318d7f4a2e3bfd4a39730bdd0f896ef18d206323099.json  query-1588fdcf8ce6f538b0cba39a7ce77c95e5f7b9db1b17f00d15455aa247af8925.json  query-1aa056b8cd123caf60600880759157f45c057e11fa40f96ce5ec617225f77f3e.json  query-1d1c1fc96c61407ea855c789c8ad35c97a8677a699415367a148482d165dc933.json  query-22e921b1e0ebaca515f88702f298219222cb0ad8757bd746e021b6c3381b86ec.json  query-2497609d8a89467f7afceafa3f44ed7afc620ec384eb9faedb3ec28e600a6765.json  query-45efdbefa3ae1aa4d7c409c7b9898d89c90e4ebaa0291cacb17d16e2e3a31c2f.json  query-466e88e8b7417e4894d787144fd526170b22cb1b32203f9decf071629e17f49a.json  query-4951f01e39539e9e26ba7e7b8c65dbb50ea536e99ac5bca8880039ccbc525668.json  query-4f54c7fe38e8e4be3433394a36da87c54c902455cac451a4303bc3ccf8e8ab15.json  query-4f6d01af0bef0253a9e872ac270dc80aeebf7f2538b163b109080bb8abade6d1.json  query-533bf43b5b7fd534960174d8dc0eecadc1bf26d1424dcccdf77fd5f9058be73e.json  query-5be411d27ab7254914938b49feea307a5cd7f5010b481d2b856d51135d63e607.json  (+25 more)
crates/verivia-core/: Cargo.toml
crates/verivia-core/migrations/: 001_create_users.sql  002_create_projects.sql  003_create_categories.sql  004_create_checklist_items.sql  005_create_notes.sql  006_add_indexes.sql  007_add_task_attribution.sql
crates/verivia-core/src/: auth.rs  checklist.rs  db.rs  errors.rs  excel.rs  lib.rs  models.rs  notes.rs  projects.rs
(+23 files in other folders)
