[package]
name = "verivia-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.14"
jsonwebtoken = "9"
calamine = "0.18"
regex = "1.8"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
