[package]
name = "verivia-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.14"
jsonwebtoken = "9"
# Pinned to 0.18 — worksheet_range() API changed in 0.22+ (Option<Result> → Result)
calamine = ">=0.18, <0.22"
regex = "1.8"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
